// Vitest Snapshot v1

exports[`tabs > shoud render mutiple block 1`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"},{\\"title\\":\\"ts\\"}]'>
<template #js=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
<template #ts=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud render mutiple block 2`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"},{\\"title\\":\\"ts\\"}]'>
<template #js=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
<template #ts=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud render single block 1`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]'>
<template #js=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud render single block 2`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]'>
<template #js=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud support active 1`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]' :active=\\"0\\">
<template #js=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud support active 2`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]' :active=\\"0\\">
<template #js=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud support active 3`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"},{\\"title\\":\\"ts\\"}]' :active=\\"1\\">
<template #js=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
<template #ts=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud support active 4`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"},{\\"title\\":\\"ts\\"}]' :active=\\"1\\">
<template #js=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
<template #ts=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud support id 1`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]' tab-id=\\"event\\">
<template #js=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud support id 2`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]' tab-id=\\"event-id\\">
<template #js=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud support id 3`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]' tab-id=\\"id with space\\">
<template #js=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud support id 4`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]' tab-id=\\"id starts and having space in the end\\">
<template #js=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > should ignore other items 1`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]' :active=\\"0\\">

<template #js=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > should ignore other items 2`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]' :active=\\"0\\">

<template #js=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;
